Update script add env ${NOIMAGE} to switch native image generating