@@ -17,4 +17,11 @@
 
 # Uncomment below to use sdk
 source "$HOME/.sdkman/bin/sdkman-init.sh"
-sdk use java 21.0.2-tem 1>&2
+# sdk use java 21.0.2-tem 1>&2
+sdk use java 21.0.2-graal 1>&2
+
+
+if [ ! -f target/CalculateAverage_tonivade_image ] && [ -z "$NOIMAGE"]; then
+    NATIVE_IMAGE_OPTS="-O3 -march=native --enable-preview"
+    native-image $NATIVE_IMAGE_OPTS -cp target/average-1.0.0-SNAPSHOT.jar -o target/CalculateAverage_tonivade_image dev.morling.onebrc.CalculateAverage_tonivade
+fi
